# dota2-tools-proton

./: .dockerignore  .gitignore  .mypy.ini  .pylintrc  Dockerfile  LICENSE  Makefile  README.md  d2tp.spec  pyproject.toml
.github/workflows/: ci.yml  release.yml
d2tp/: __init__.py  __main__.py  build.py  cli.py  custom_game.py  dota2.py  game.py  log.py  runner.py  version.py
installer/: d2tp.spec
installer/analysis/: _pyi_filelock.py  _pyi_proton.py
scripts/: build.sh
stubs/: proton.pyi
