[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "dota2-tools-proton"
version = "0.1.0"
description = "Dota 2 Workshop Tools using Proton"
authors = ["Kiyoshi Murata <kbmurata@gmail.com>"]
packages = [
  { include = "d2tp" }
]

[tool.poetry.scripts]
d2tp = 'd2tp.cli:main'

[tool.poetry.dependencies]
python = "^3.9"
appdirs = "^1.4.4"
vdf = "^3.3"

[tool.poetry.dev-dependencies]
black = "^21.4b2"
isort = "^5.8.0"
mypy = "^0.812"
ptpython = "^3.0.17"
pylint = "^2.8.2"
rope = "^0.19.0"
flake8 = "^3.9.1"

[tool.black]
line-length = 98
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | tmp
  )/
)
'''

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 88
multi_line_output = 3
use_parentheses = true
