[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "dota2-tools-proton"
version = "0.3.1"
description = "Dota 2 Workshop Tools using Proton"
authors = ["Kiyoshi Murata <kbmurata@gmail.com>"]
packages = [{ include = "d2tp" }]

[tool.poetry.scripts]
d2tp = 'd2tp.cli:main'

[tool.poetry.dependencies]
python = "^3.10,<3.12"
appdirs = "^1.4.4"
pyinstaller = "^5.6"
vdf = "^3.3"

[tool.poetry.dev-dependencies]
black = "^22.1"
isort = "^5.10"
mypy = "^0.931"
ptpython = "^3.0"
pylint = "^2.12"
rope = "^0.22"

[tool.black]
line-length = 98
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | tmp
  )/
)
'''

[tool.isort]
profile = "black"
